Fix [sc-8024]: French translation of upload data item

--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -26,7 +26,7 @@
             [routerLinkActiveOptions]="{ exact: true }"
             [class.disabled]="!(isAdminOrContrib | async) || (invalidKey | async)">
             <pa-icon name="upload"></pa-icon>
-            <span class="nav-link-title">{{ 'stash.upload_data' | translate }}</span>
+            <span class="nav-link-title">{{ 'sidenav.upload-data' | translate }}</span>
           </a>
           <a
             class="nav-link"
