--- a/apps/nucliadb-admin/src/app/home/home-page.component.html
+++ b/apps/nucliadb-admin/src/app/home/home-page.component.html
@@ -1,38 +1,39 @@
-<div class="home-container body-m">
-  <ng-container *ngIf="hasValidKey | async">
-    <p>
-      By using a NUA API Key you can utilize
-      <a
-        href="https://nuclia.cloud"
-        target="_blank">
-        Nuclia's Cloud Processing Engine
-      </a>
-    </p>
-    <p>Your data remains stored locally, but you have access to a dashboard for following your metrics and more.</p>
-  </ng-container>
-
-  <div *ngIf="(hasValidKey | async) === false">
-    <h1>
-      <pa-icon
-        name="warning"
-        size="xlarge"></pa-icon>
-      {{ errorMessage | async }}
-    </h1>
-    <p>
-      Provide your NUA API Key by using the environment variable
-      <code>NUA_API_KEY</code>
-      or the
-      <code>--nuclia-api-key</code>
-      cli flag.
-    </p>
-    <p>
-      If you don't have a NUA API Key follow this
-      <a
-        href="https://docs.nuclia.dev/docs/docs/getting-started/on-premise"
-        rel="noopener noreferrer"
-        target="_blank">
-        guide
-      </a>
-    </p>
-  </div>
+<div class="home-page page-spacing">
+  @if (version | async; as versions) {
+    <div class="version-container container-box">
+      <strong>NucliaDB:</strong>
+      <div>
+        {{ versions.nucliadb.installed }}
+      </div>
+      <strong>NucliaDB Admin:</strong>
+      <div>
+        {{ versions['nucliadb-admin-assets'].installed }}
+      </div>
+      <strong>NUA API Key:</strong>
+      <div class="check-item">
+        @if (hasValidKey | async) {
+          <div>
+            <div>
+              <pa-icon
+                class="primary"
+                name="circle-check"></pa-icon>
+              <span [innerHTML]="'standalone.nua-key-status.valid.nua-allows-to' | translate"></span>
+            </div>
+            <div>{{ 'standalone.nua-key-status.valid.store-locally' | translate }}</div>
+          </div>
+        } @else {
+          <div>
+            <div>
+              <pa-icon
+                class="destructive"
+                name="warning"></pa-icon>
+              <strong>{{ errorMessage | async }}</strong>
+            </div>
+            <div [innerHTML]="'standalone.nua-key-status.invalid.provide-by' | translate"></div>
+            <div [innerHTML]="'standalone.nua-key-status.invalid.how-to-get-nua-key' | translate"></div>
+          </div>
+        }
+      </div>
+    </div>
+  }
 </div>
