Fix [sc-8077]: onboarding on regional system

--- a/libs/user/src/lib/onboarding/step2/step2.component.html
+++ b/libs/user/src/lib/onboarding/step2/step2.component.html
@@ -17,7 +17,7 @@
           [disabled]="zone.notAvailableYet">
           {{ zone.title || zone.slug }}
           @if (zone.notAvailableYet) {
-            ({{ 'onboarding.step2.coming-soon' | translate }})
+            {{ 'onboarding.step2.coming-soon' | translate }}
           }
         </pa-radio>
       }
