[sc-8079] Display estimated time in hours if needed

--- a/apps/dashboard/src/app/onboarding/getting-started/processing/processing.component.html
+++ b/apps/dashboard/src/app/onboarding/getting-started/processing/processing.component.html
@@ -9,7 +9,9 @@
     @if (totalEstimatedTime) {
       <div class="estimated-time">
         <strong>
-          {{ 'getting-started.processing.estimated-time' | translate: { estimation: totalEstimatedTime } }}
+          {{
+            'getting-started.processing.estimated-time' | translate: { estimation: totalEstimatedTime | formatDuration }
+          }}
         </strong>
       </div>
     }
