Fix kb creation in kb selection page

--- a/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.html
+++ b/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.html
@@ -88,7 +88,7 @@
     <pa-button
       *ngIf="!addKb && (standalone || (canAddKb | async) === true)"
       data-cy="create-kb-button"
-      (click)="toggleForm()">
+      (click)="openKbForm()">
       {{ 'stash.create.title' | translate }}
     </pa-button>
 
