--- a/libs/user/src/lib/login/login.component.html
+++ b/libs/user/src/lib/login/login.component.html
@@ -45,7 +45,7 @@
           name="login_challenge"
           [value]="loginChallenge" />
         <div class="login_policy body-xs">
-          <span [innerHTML]="'onboarding.consent' | translate"></span>
+          <span [innerHTML]="'onboarding.step2.consent' | translate"></span>
         </div>
         <div
           class="login_form_error body-xs"
