--- a/libs/sistema/styles/_variables.scss
+++ b/libs/sistema/styles/_variables.scss
@@ -8,5 +8,5 @@ $padding-bottom-page: rhythm(6);
 $padding-right-page: rhythm(4);
 $padding-left-page: rhythm(12);
 
-$navbar-width: rhythm(7);
+$width-sidenav: rhythm(26);
 $scrollbar-width: rhythm(2);
